--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<md-card>
+  <!--<md-input placeholder="Url" id="url" url="url" [(ngModel)]="urlInputValue" #url="ngModel" required>
+    <md-hint *ngIf="url.errors && (url.dirty || url.touched)" [ngStyle]="{'color': 'red'}"> Url is required </md-hint>
+  </md-input>
+
+  <button md-raised-button color="accent" [disabled]="isUrlInputEmpty()" (click)="onRequestBtnClick()">
+        Request
+    </button>-->
+  here
+</md-card>
